frontend/test/should_fail/index_count_edge_same_argument_mismatch.grg
#using "index_count_edge_model.gm"

rule i {
	if{ countEdgesFromIndexSame(fooi, "42") > 0; }
	
	modify {
	}
}
